--- a/scss/train.scss
+++ b/scss/train.scss
@@ -16,7 +16,24 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 h1 {
   font-family: 'Oswald';
   letter-spacing: 25px;
+}
+
+.window {
+	z-index:2;
+}
+.mapContainer { 
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height: 100%; 
+	z-index:-1;
+}
+.map {
+	width:100%;
+	height:100%;
 }
