--- a/scss/train.scss
+++ b/scss/train.scss
@@ -20,20 +20,38 @@ body {
 h1 {
   font-family: 'Oswald';
   letter-spacing: 25px;
+  font-color: white;
+  color: white;
+  z-index: 3;
+  position: relative;
 }
 
 .window {
-	z-index:2;
+	z-index:4;
 }
-.mapContainer { 
+.mapContainer {
 	position:fixed;
 	top:0;
 	left:0;
 	width:100%;
-	height: 100%; 
+	height: 100%;
 	z-index:-1;
+  filter: grayscale(100%);
 }
 .map {
-	width:100%;
-	height:100%;
+	width:100vw;
+	height:100vh;
+  -webkit-filter: blur(5px)
+}
+div.overlay {
+  position: absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  color: black;
+  background-color: black;
+  opacity: 0.5;
+  width: 100vw;
+  height: 100vh;
+  z-index:2;
 }
