--- a/scss/train.scss
+++ b/scss/train.scss
@@ -3,12 +3,10 @@
 /*=============================
 =            Reset            =
 =============================*/
-
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
-
 body {
   height: 100vh;
   width: 100vw;
@@ -16,7 +14,6 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 h1 {
   font-family: 'Oswald';
   letter-spacing: 25px;
@@ -25,33 +22,32 @@ h1 {
   z-index: 3;
   position: relative;
 }
-
 .window {
-	z-index:4;
+  z-index: 4;
 }
 .mapContainer {
-	position:fixed;
-	top:0;
-	left:0;
-	width:100%;
-	height: 100%;
-	z-index:-1;
-  filter: grayscale(100%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  filter:grayscale(100%);
 }
 .map {
-	width:100vw;
-	height:100vh;
-  -webkit-filter: blur(5px)
+  width: 100vw;
+  height: 100vh;
+  -webkit-filter: blur(5px);
 }
 div.overlay {
   position: absolute;
-  top:0;
-  bottom:0;
-  left:0;
+  top: 0;
+  bottom: 0;
+  left: 0;
   color: black;
   background-color: black;
   opacity: 0.5;
   width: 100vw;
   height: 100vh;
-  z-index:2;
+  z-index: 2;
 }
