--- a/scss/train.scss
+++ b/scss/train.scss
@@ -1,4 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald:300);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+
 /* CSS declarations go here */
 /*=============================
 =            Reset            =
@@ -6,7 +8,14 @@
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
+
 */
+
+body {
+  font-family: 'Open Sans';
+  font-weight: 700;
+}
+
 h1 {
   font-family: 'Oswald';
   letter-spacing: 25px;
@@ -36,6 +45,12 @@ h1 {
   width: 100vw;
   height: 100vh;
 }
+
+.mapSmall {
+  width:400px;
+  height:400px;
+}
+
 div.overlay {
   position: absolute;
   top: 0;
@@ -48,6 +63,28 @@ div.overlay {
   height: 100vh;
   z-index: 2;
 }
+
+.submenu {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  
+  padding:2rem;
+  width:50%;
+  background:rgba(0,0,0,0.3);
+  color:#fff;
+
+  h3 {
+    text-transform: uppercase;
+    letter-spacing:5px;
+    font-size:2rem;
+  }
+}
+
+.menu {
+  padding-left:25vw;
+}
+
 .slideout-menu {
   position: fixed;
   left: 0;
