Um did config for bar rating. ^-^

--- a/scss/bars-movie.scss
+++ b/scss/bars-movie.scss
@@ -6,12 +6,12 @@
   width: 60px;
   height: 8px;
   float: left;
-  background-color: #bbcefb;
+  background-color: #ffffff;
   margin: 1px;
 }
 .br-theme-bars-movie .br-widget a.br-active,
 .br-theme-bars-movie .br-widget a.br-selected {
-  background-color: #4278f5;
+  background-color: #8C8C8C;
 }
 .br-theme-bars-movie .br-widget .br-current-rating {
   clear: both;
@@ -20,7 +20,7 @@
   font-weight: 600;
   display: block;
   padding: .5em 0;
-  color: #4278f5;
+  color: #8C8C8C;
   font-weight: 400;
 }
 .br-theme-bars-movie .br-readonly a.br-active,
