--- a/scss/train.scss
+++ b/scss/train.scss
@@ -35,19 +35,48 @@ h1 {
   z-index: 4;
   height: 100vh;
   width: 100vw;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  
   justify-content: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+
   align-items: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+
   flex-direction: column;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
 }
 .window.hidden {
   display:none;
 }
 .childFlex {
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  
   flex-direction: row;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+
   flex-wrap: nowrap;
+  -webkit-flex-wrap: nowrap;
+  -moz-flex-wrap: nowrap;
+
   align-items: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  
 }
 .mapContainer {
   position: fixed;
