--- a/scss/train.scss
+++ b/scss/train.scss
@@ -10,19 +10,18 @@
    License: none (public domain)
 
 */
-
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
-
 body {
   font-family: 'Open Sans';
   font-weight: 700;
 }
-
 h1 {
   font-family: 'Oswald';
   letter-spacing: 25px;
@@ -35,48 +34,39 @@ h1 {
   z-index: 4;
   height: 100vh;
   width: 100vw;
-  
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  
   justify-content: center;
   -webkit-justify-content: center;
   -moz-justify-content: center;
-
   align-items: center;
   -webkit-align-items: center;
   -moz-align-items: center;
-
   flex-direction: column;
   -webkit-flex-direction: column;
   -moz-flex-direction: column;
 }
 .window.hidden {
-  display:none;
+  display: none;
 }
 .childFlex {
-  
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  
   flex-direction: row;
   -webkit-flex-direction: row;
   -moz-flex-direction: row;
-
   flex-wrap: nowrap;
   -webkit-flex-wrap: nowrap;
   -moz-flex-wrap: nowrap;
-
   align-items: center;
   -webkit-align-items: center;
   -moz-align-items: center;
-  
 }
 .mapContainer {
   position: fixed;
@@ -91,8 +81,6 @@ h1 {
   width: 100vw;
   height: 100vh;
 }
-
-
 div.overlay {
   position: absolute;
   top: 0;
@@ -105,24 +93,20 @@ div.overlay {
   height: 100vh;
   z-index: 2;
 }
-
 .submenu {
   position: fixed;
   bottom: 0;
   right: 0;
-
-  padding:2rem;
-  width:50%;
-  height:200px;
-  background:rgba(0,0,0,0.3);
-  color:#fff;
-  
+  padding: 2rem;
+  width: 50%;
+  height: 200px;
+  background: rgba(0,0,0,0.3);
+  color: #fff;
   transition: all 0.5s ease;
-
   h3 {
     text-transform: uppercase;
-    letter-spacing:5px;
-    font-size:2rem;
+    letter-spacing: 5px;
+    font-size: 2rem;
   }
 }
 .submenu.hidden {
@@ -130,12 +114,10 @@ div.overlay {
   bottom: -200px;
   right: 0;
 }
-
 .menu {
-  padding-top:10vh;
-  padding-left:15vw;
+  padding-top: 10vh;
+  padding-left: 15vw;
 }
-
 .slideout-menu {
   position: fixed;
   left: 0;
@@ -146,7 +128,7 @@ div.overlay {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   display: none;
-  background-color: #EEEEEE;
+  background-color: #eee;
 }
 .slideout-panel {
   position: relative;
@@ -175,7 +157,7 @@ div.overlay {
   font-family: 'Oswald';
 }
 button.toggle-button:hover {
-  color: #B2B2B2;
+  color: #b2b2b2;
   font-style: none;
 }
 span {
@@ -194,68 +176,57 @@ span {
 .button-submit {
   margin-top: 2vh;
 }
-
 .routes {
   padding: 0;
   margin: 0;
   list-style: none;
-  
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  
   -webkit-flex-flow: row wrap;
   justify-content: flex-start;
-
-   -webkit-flex-direction: row; 
-   flex-direction: row;
-
+  -webkit-flex-direction: row;
+  flex-direction: row;
 }
 .mapListItem {
-    text-transform: uppercase;
-    padding:15px;
-    cursor:pointer;
+  text-transform: uppercase;
+  padding: 15px;
+  cursor: pointer;
 }
-
 .mapListItem:hover {
-    background-color:rgba(0,0,0,0.05);
+  background-color: rgba(0,0,0,0.05);
 }
-
 .mapItem {
   width: 200px;
   height: 180px;
-  overflow:hidden;
+  overflow: hidden;
   text-align: center;
   padding: 5px;
-
- 
 }
-
 .mapSmallHolder {
   width: 200px;
   height: 180px;
-  overflow:hidden;
+  overflow: hidden;
   text-align: center;
 }
-
 .mapSmallInfo {
-  padding:1rem 0;
+  padding: 1rem 0;
 }
-
 .mapSmall {
-  margin-top:-20px;
-  width:100%;
-  height:220px;
+  margin-top: -20px;
+  width: 100%;
+  height: 220px;
 }
-
-@media (max-width: 450px) {
+@media (max-width:700px){
+  /* Styles */
   .childFlex {
     flex-direction: column;
+    -webkit-flex-direction: column;;
+    -moz-flex-direction: column;
   }
   span {
     display: none;
   }
 }
-
