--- a/scss/bars-movie.scss
+++ b/scss/bars-movie.scss
@@ -11,7 +11,7 @@
 }
 .br-theme-bars-movie .br-widget a.br-active,
 .br-theme-bars-movie .br-widget a.br-selected {
-  background-color: #8C8C8C;
+  background-color: #f75850;
 }
 .br-theme-bars-movie .br-widget .br-current-rating {
   clear: both;
@@ -20,10 +20,10 @@
   font-weight: 600;
   display: block;
   padding: .5em 0;
-  color: #8C8C8C;
+  color: #f75850;
   font-weight: 400;
 }
 .br-theme-bars-movie .br-readonly a.br-active,
 .br-theme-bars-movie .br-readonly a.br-selected {
-  background-color: #4278f5;
+  background-color: #f75850;
 }
