--- a/scss/train.scss
+++ b/scss/train.scss
@@ -232,10 +232,11 @@ span {
 
   .toggle-button-right {
 
-    font-size: 3vw;
+    font-size: 3vh;
   }
   .search-icon {
     font-size: 6vh;
+    margin-top: 1vh;
   }
 }
 .toggle-button-left {
