--- a/scss/train.scss
+++ b/scss/train.scss
@@ -100,7 +100,7 @@ div.overlay {
   right: 0;
   padding: 2rem;
   width: 50%;
-  height: 200px;
+  height: 150px;
   background: rgba(0,0,0,0.3);
   color: #fff;
   transition: all 0.5s ease;
@@ -112,7 +112,7 @@ div.overlay {
 }
 .submenu.hidden {
   position: fixed;
-  bottom: -200px;
+  bottom: -150px;
   right: 0;
 }
 .menu {
@@ -222,10 +222,13 @@ span {
 }
 
 input[type=button], input[type=submit], input[type=button]:active, input[type=submit]:active {
+  margin:3rem 0;
   color:#fff;
 }
 
-
+.arrow {
+  margin:0 2rem;
+}
 @media (max-width:700px) {
   /* Styles */
   .childFlex {
@@ -275,4 +278,58 @@ input[type=button], input[type=submit], input[type=button]:active, input[type=su
 .stretchyBox {
   display: flex;
   justify-content: space-between;
+}
+
+.loader {
+  position:fixed;
+  top:50%;
+  left:50%;
+  margin-top:-20px;
+  margin-left:-20px;
+  z-index: 4;
+  display:none;
+}
+.spinner {
+  width: 40px;
+  height: 40px;
+
+  position: relative;
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+  animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+.places {
+    display:none;
+}
+
+@-webkit-keyframes sk-bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bounce {
+  0%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
 }
