--- a/scss/train.scss
+++ b/scss/train.scss
@@ -26,6 +26,7 @@ body {
 h1 {
   font-family: 'Oswald';
   letter-spacing: 25px;
+  font-size: 10vw;
   font-color: white;
   color: white;
   z-index: 3;
