--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -2,9 +2,13 @@
   /* Styles */
 
   body .mapContainer {
-  	height:50%;
+  	height:100%;
   }
-
+  
+  body .mapContainerHalf {
+    height:50%;
+  }
+  
   body .submenu {
   	background-color:#333333;
   	height:50%;
