--- a/scss/train.scss
+++ b/scss/train.scss
@@ -366,5 +366,25 @@ input[type=button], input[type=submit], input[type=button]:active, input[type=su
 
 .imageFlickr {
   display:inline-block;
+  padding:10px 10px 10px 0;
 
+}
+
+.tabs {
+  padding:0 2rem;
+}
+.routesTab {
+  list-style-type: none;
+
+  li {
+    display: inline-block;
+    padding:0 0 1rem 0;
+    margin:0 2rem 0 0;
+    cursor:pointer;
+    
+  }
+
+  li.active {
+    border-bottom:2px solid #000;
+  }
 }
