--- a/scss/train.scss
+++ b/scss/train.scss
@@ -151,7 +151,7 @@ div.overlay {
   position: absolute;
   border: 0;
   right: 0vw;
-  top: 0vh;
+  top: 20px;
   font-size: 2vw;
 
   color: white;
@@ -162,6 +162,12 @@ button.toggle-button-right:hover {
   color: #b2b2b2;
   font-style: none;
 }
+
+button.toggle-button-right:active, button.toggle-button-right:focus {
+  color: white;
+  font-style: none;
+}
+
 span {
   font-size: 5vw;
   font-family: 'Oswald';
@@ -201,8 +207,8 @@ span {
   background-color: rgba(0,0,0,0.05);
 }
 .mapItem {
-  width: 150px;
-  height: 180px;
+  width: 100px;
+  height: 220px;
   overflow: hidden;
   text-align: center;
   padding: 5px;
@@ -217,7 +223,7 @@ span {
   padding: 1rem 0;
 }
 .mapSmall {
-  margin-top: -20px;
+  margin-top: -30px;
   width: 100%;
   height: 220px;
 }
