--- a/scss/train.scss
+++ b/scss/train.scss
@@ -246,7 +246,7 @@ input[type=button], input[type=submit], input[type=button]:active, input[type=su
 .arrow {
   margin:0 2rem;
 }
-@media (max-width:700px) {
+@media screen and (max-width:700px) {
   /* Styles */
   .childFlex {
     flex-direction: column;
@@ -394,7 +394,7 @@ input[type=button], input[type=submit], input[type=button]:active, input[type=su
     padding:0 0 1rem 0;
     margin:0 2rem 0 0;
     cursor:pointer;
-
+    font-family: 'Open Sans';
   }
 
   li.active {
